@@ -1,5 +1,5 @@
 """Emit a message for iteration through dict keys and subscripting dict with key."""
-# pylint: disable=locally-disabled,useless-suppression,suppressed-message,line-too-long,missing-docstring,unsubscriptable-object,too-few-public-methods,redefined-outer-name,use-dict-literal,iterating-modified-dict
+# pylint: disable=locally-disabled,useless-suppression,suppressed-message,line-too-long,missing-docstring,unsubscriptable-object,too-few-public-methods,redefined-outer-name,use-dict-literal,modified-iterating-dict
 
 def bad():
     a_dict = {1: 1, 2: 2, 3: 3}
